@@ -4,6 +4,6 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-AUTO CREATE USERS="Auto-create Users"
-PARAMAUTOCREATEUSERS="Automatically create Registered Users where possible"
-PLG_USER_JOOMLA="Handles Joomla!'s default User synchronisation"
+PLG_USER_JOOMLA_AUTOREGISTER_LABEL="Auto-create Users"
+PLG_USER_JOOMLA_AUTOREGISTER_DESC="Automatically create Registered Users where possible"
+PLG_USER_JOOMLA_XML_DESCRIPTION="Handles Joomla!'s default User synchronisation"
