@@ -4,69 +4,27 @@
 ; License http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-USER_PROFILE_ADDRESS1_DESC="Address1 Desc"
-USER_PROFILE_ADDRESS1_LABEL="Address1"
-USER_PROFILE_ADDRESS2_DESC="Address2 Desc"
-USER_PROFILE_ADDRESS2_LABEL="Address2"
-USER_PROFILE_CITY_DESC="City Desc"
-USER_PROFILE_CITY_LABEL="City"
-USER_PROFILE_COUNTRY_DESC="Country Desc"
-USER_PROFILE_COUNTRY_LABEL="Country"
-USER_PROFILE_PHONE_DESC="Phone Desc"
-USER_PROFILE_PHONE_LABEL="Phone"
-USER_PROFILE_POSTAL_CODE_DESC="Postal Code Desc"
-USER_PROFILE_POSTAL_CODE_LABEL="Postal Code"
-USER_PROFILE_REGION_DESC="Region Desc"
-USER_PROFILE_REGION_LABEL="Region"
-USER_PROFILE_WEB_SITE_DESC="Web Site Desc"
-USER_PROFILE_WEB_SITE_LABEL="Web site"
-USER_PROFILE_PLUGIN_DESC="User Profile Plug-in"
+PLG_USER_PROFILE_FIELD_ADDRESS1_DESC="Address1 Desc"
+PLG_USER_PROFILE_FIELD_ADDRESS1_LABEL="Address1"
+PLG_USER_PROFILE_FIELD_ADDRESS2_DESC="Address2 Desc"
+PLG_USER_PROFILE_FIELD_ADDRESS2_LABEL="Address2"
+PLG_USER_PROFILE_FIELD_CITY_DESC="City Desc"
+PLG_USER_PROFILE_FIELD_CITY_LABEL="City"
+PLG_USER_PROFILE_FIELD_COUNTRY_DESC="Country Desc"
+PLG_USER_PROFILE_FIELD_COUNTRY_LABEL="Country"
+PLG_USER_PROFILE_FIELD_PHONE_LABEL="Phone Desc"
+PLG_USER_PROFILE_FIELD_PHONE_LABEL="Phone"
+PLG_USER_PROFILE_FIELD_POSTAL_CODE_DESC="Postal Code Desc"
+PLG_USER_PROFILE_FIELD_POSTAL_CODE_LABEL="Postal Code"
+PLG_USER_PROFILE_FIELD_POSTAL_CODE_LABEL="Region Desc"
+PLG_USER_PROFILE_FIELD_REGION_LABEL="Region"
+PLG_USER_PROFILE_FIELD_WEB_SITE_DESC="Web Site Desc"
+PLG_USER_PROFILE_FIELD_WEB_SITE_LABEL="Web site"
+PLG_USER_PROFILE_XML_DESCRIPTION="User Profile Plug-in"
 
+; used in User manager
+PLG_USER_PROFILE_SLIDER_LABEL="User profile"
 
-MEMBERS_REGISTRATION_TOGGLE_ADDRESS1_LABEL="Reg. Address 1"
-MEMBERS_REGISTRATION_TOGGLE_ADDRESS1_DESC=""
-
-MEMBERS_REGISTRATION_TOGGLE_ADDRESS2_LABEL="Reg. Address 2"
-MEMBERS_REGISTRATION_TOGGLE_ADDRESS2_DESC=""
-
-MEMBERS_REGISTRATION_TOGGLE_CITY_LABEL="Reg. City"
-MEMBERS REGISTRATION_TOGGLE_CITY_DESC="_QQ_S"
-
-MEMBERS_REGISTRATION_TOGGLE_REGION_LABEL="Reg. Region"
-MEMBERS_REGISTRATION_TOGGLE_REGION_DESC=""
-
-MEMBERS_REGISTRATION_TOGGLE_COUNTRY_LABEL="Reg. Country"
-MEMBERS_REGISTRATION_TOGGLE_COUNTRY_DESC=""
-
-MEMBERS_REGISTRATION_TOGGLE_POSTAL_CODE_LABEL="Reg. Postal Code"
-MEMBERS_REGISTRATION_TOGGLE_POSTAL_CODE_DESC=""
-
-MEMBERS_PROFILE_TOGGLE_PHONE_LABEL="Profile Phone"
-MEMBERS_REGISTRATION_TOGGLE_PHONE_DESC=""
-
-MEMBERS_REGISTRATION_TOGGLE_WEB_SITE_LABEL="Web site"
-MEMBERS_REGISTRATION_TOGGLE_WEB_SITE_DESC=""
-
-MEMBERS_PROFILE_TOGGLE_ADDRESS1_LABEL="Address 1"
-MEMBERS_PROFILE_TOGGLE_ADDRESS1_DESC=""
-
-MEMBERS_PROFILE_TOGGLE_ADDRESS2_LABEL="Address 2"
-MEMBERS_PROFILE_TOGGLE_ADDRESS2_DESC=""
-
-MEMBERS_PROFILE_TOGGLE_CITY_LABEL="Profile City"
-MEMBERS_PROFILE_TOGGLE_CITY_DESC=""
-
-MEMBERS_PROFILE_TOGGLE_REGION_LABEL="Profile Region"
-MEMBERS_PROFILE_TOGGLE_REGION_DESC=""
-
-MEMBERS_PROFILE_TOGGLE_COUNTRY_LABEL="Profile Country"
-MEMBERS_PROFILE_TOGGLE_COUNTRY_DESC=""
-
-MEMBERS_PROFILE_TOGGLE_POSTAL_CODE_LABEL="Profile Postal Code"
-MEMBERS_PROFILE_TOGGLE_POSTAL_CODE_DESC=""
-
-MEMBERS_PROFILE_TOGGLE_PHONE_LABEL="Profile Phone"
-MEMBERS_PROFILE_TOGGLE_PHONE_DESC=""
-
-MEMBERS_PROFILE_TOGGLE_WEB_SITE_LABEL="Profile Web site"
-MEMBERS_PROFILE_TOGGLE_WEB_SITE_DESC=""
+; spacers
+PLG_USER_PROFILE_FIELD_NAME_PROFILE_REQUIRE_USER="<strong>Required user profile informations</strong>"
+PLG_USER_PROFILE_FIELD_NAME_REGISTER_REQUIRE_USER="<strong>Required user profile informations at registration (?)</strong>"
