@@ -11,7 +11,7 @@
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
 	<version>1.5</version>
-	<description>PLG_USER_JOOMLA</description>
+	<description>PLG_USER_JOOMLA_XML_DESCRIPTION</description>
 	<files>
 		<filename
 			plugin="joomla">joomla.php</filename>
@@ -21,8 +21,8 @@
 			name="autoregister"
 			type="radio"
 			default="1"
-			label="Auto Create Users"
-			description="fieldAUTOCREATEUSERS">
+			label="PLG_USER_JOOMLA_AUTOREGISTER_LABEL"
+			description="PLG_USER_JOOMLA_AUTOREGISTER_DESC">
 			<option
 				value="0">JNo</option>
 			<option
