@@ -1,14 +1,16 @@
+
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Id: profile.xml 11567 2009-02-02 23:13:14Z eddieajau $ -->
+
 <form>
-	<fields group="profile" array="true" label="User_Profile_Label">
+	<fields group="profile" array="true" label="PLG_USER_PROFILE_SLIDER_LABEL">
 		<field
 			name="address1"
 			type="text"
 			id="address1"
-			label="User_Profile_Address1_Label"
-			description="User_Profile_Address1_Desc"
-			message="User_Profile_Address1_Message"
+			label="PLG_USER_PROFILE_FIELD_ADDRESS1_LABEL"
+			description="PLG_USER_PROFILE_FIELD_ADDRESS1_DESC"
+			message="PLG_USER_PROFILE_FIELD_ADDRESS1_MESSAGE"
 			class="inputbox"
 			size="30"
 			default=""
@@ -18,9 +20,9 @@
 			name="address2"
 			type="text"
 			id="address2"
-			label="User_Profile_Address2_Label"
-			description="User_Profile_Address2_Desc"
-			message="User_Profile_Address1_Message"
+			label="PLG_USER_PROFILE_FIELD_ADDRESS2_LABEL"
+			description="PLG_USER_PROFILE_FIELD_ADDRESS2_DESC"
+			message="PLG_USER_PROFILE_FIELD_ADDRESS1_MESSAGE"
 			class="inputbox"
 			size="30"
 			default=""
@@ -30,9 +32,9 @@
 			name="city"
 			type="text"
 			id="city"
-			label="User_Profile_City_Label"
-			description="User_Profile_City_Desc"
-			message="User_Profile_City_Message"
+			label="PLG_USER_PROFILE_FIELD_CITY_LABEL"
+			description="PLG_USER_PROFILE_FIELD_CITY_DESC"
+			message="PLG_USER_PROFILE_FIELD_CITY_MESSAGE"
 			class="inputbox"
 			size="30"
 			default=""
@@ -42,9 +44,9 @@
 			name="region"
 			type="text"
 			id="region"
-			label="User_Profile_Region_Label"
-			description="User_Profile_Region_Desc"
-			message="User_Profile_Region_Message"
+			label="PLG_USER_PROFILE_FIELD_REGION_LABEL"
+			description="PLG_USER_PROFILE_FIELD_REGION_DESC"
+			message="PLG_USER_PROFILE_FIELD_REGION_MESSAGE"
 			class="inputbox"
 			size="30"
 			default=""
@@ -54,9 +56,9 @@
 			name="country"
 			type="text"
 			id="country"
-			label="User_Profile_Country_Label"
-			description="User_Profile_Country_Desc"
-			message="User_Profile_Country_Message"
+			label="PLG_USER_PROFILE_FIELD_COUNTRY_LABEL"
+			description="PLG_USER_PROFILE_FIELD_COUNTRY_DESC"
+			message="PLG_USER_PROFILE_FIELD_COUNTRY_MESSAGE"
 			class="inputbox"
 			size="30"
 			default=""
@@ -66,9 +68,9 @@
 			name="postal_code"
 			type="text"
 			id="postal_code"
-			label="User_Profile_postal_code_Label"
-			description="User_Profile_postal_code_Desc"
-			message="User_Profile_postal_code_Message"
+			label="PLG_USER_PROFILE_FIELD_POSTAL_CODE_LABEL"
+			description="PLG_USER_PROFILE_FIELD_POSTAL_CODE_DESC"
+			message="PLG_USER_PROFILE_FIELD_POSTAL_CODE_MESSAGE"
 			class="inputbox"
 			size="30"
 			default=""
@@ -78,9 +80,9 @@
 			name="phone"
 			type="text"
 			id="phone"
-			label="User_Profile_Phone_Label"
-			description="User_Profile_Phone_Desc"
-			message="User_Profile_Phone_Message"
+			label="PLG_USER_PROFILE_FIELD_PHONE_LABEL"
+			description="PLG_USER_PROFILE_FIELD_PHONE_DESC"
+			message="PLG_USER_PROFILE_FIELD_PHONE_MESSAGE"
 			class="inputbox"
 			size="30"
 			default=""
@@ -90,9 +92,9 @@
 			name="website"
 			type="text"
 			id="website"
-			label="User_Profile_web_site_Label"
-			description="User_Profile_web_site_Desc"
-			message="User_Profile_web_site_Message"
+			label="PLG_USER_PROFILE_FIELD_WEB_SITE_LABEL"
+			description="PLG_USER_PROFILE_FIELD_WEB_SITE_DESC"
+			message="PLG_USER_PROFILE_FIELD_WEB_SITE_MESSAGE"
 			class="inputbox"
 			size="30"
 			default=""
