@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+04-Feb-2010 Jean-Marie Simonet
+^ Refactored user plugins ini keys.
+
 04-Feb-2010 Hannes Papenberg
 ^ Changed behaviour of JHTML::image, JHTML::script and JHTML::stylesheet and moved images back into the respective folder
 
